:memo: Update api doc
